# mapalgebra

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  mapalgebra.cabal  notes.org  package.yaml  stack.yaml
bench/: Bench.hs
bench/geotrellis/: build.sbt
bench/geotrellis/src/main/scala/mapalgebra/: Composite.scala  Creation.scala  Focal.scala  IO.scala
bench/rasterio/: 512x512.tif  gray512.tif  testing.py
data/: 256x256.tif  512x512.tif  gray512.tif
geotrellis/src/main/scala/mapalgebra/: Composite.scala  Focal.scala  IO.scala  Local.scala
lib/Geography/: MapAlgebra.hs  Types.hs
test/: Test.hs
